--- a/BookFlo.csproj
+++ b/BookFlo.csproj
@@ -57,6 +57,14 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="bootstrap-3.3.1-dist\dist\css\bootstrap-theme.css" />
+    <Content Include="bootstrap-3.3.1-dist\dist\css\bootstrap-theme.min.css" />
+    <Content Include="bootstrap-3.3.1-dist\dist\css\bootstrap.css" />
+    <Content Include="bootstrap-3.3.1-dist\dist\css\bootstrap.min.css" />
+    <Content Include="bootstrap-3.3.1-dist\dist\fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="bootstrap-3.3.1-dist\dist\js\bootstrap.js" />
+    <Content Include="bootstrap-3.3.1-dist\dist\js\bootstrap.min.js" />
+    <Content Include="bootstrap-3.3.1-dist\dist\js\npm.js" />
     <Content Include="css\admin.css" />
     <Content Include="css\bootstrap-responsive.min.css" />
     <Content Include="css\bootstrap.min.css" />
@@ -172,6 +180,11 @@
     <Content Include="js\isotope\_posts\docs\2011-12-11-help.mdown" />
     <Content Include="js\isotope\_posts\docs\2011-12-20-license.mdown" />
     <Content Include="js\angular.min.js.map" />
+    <Content Include="bootstrap-3.3.1-dist\dist\css\bootstrap-theme.css.map" />
+    <Content Include="bootstrap-3.3.1-dist\dist\css\bootstrap.css.map" />
+    <Content Include="bootstrap-3.3.1-dist\dist\fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="bootstrap-3.3.1-dist\dist\fonts\glyphicons-halflings-regular.ttf" />
+    <Content Include="bootstrap-3.3.1-dist\dist\fonts\glyphicons-halflings-regular.woff" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
