--- a/BookFlo.csproj
+++ b/BookFlo.csproj
@@ -155,6 +155,7 @@
     <Content Include="js\isotope\_posts\tests\2012-08-11-combo-sort-history.html" />
     <Content Include="js\jquery-1.9.1.js" />
     <Content Include="js\jquery-ui-1.10.3.custom.min.js" />
+    <Content Include="js\jquery.mousewheel.min.js" />
     <Content Include="js\stuff.js" />
     <Content Include="RECOVERDB.txt" />
     <Content Include="Web.config" />
