--- a/BookFlo.csproj
+++ b/BookFlo.csproj
@@ -68,6 +68,7 @@
     <Content Include="css\admin.css" />
     <Content Include="css\bootstrap-responsive.min.css" />
     <Content Include="css\bootstrap.min.css" />
+    <Content Include="css\font-awesome.css" />
     <Content Include="css\main.css" />
     <Content Include="css\Menu.css" />
     <Content Include="css\Menu2.css" />
@@ -193,6 +194,9 @@
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="fonts\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
