--- a/.gitignore
+++ b/.gitignore
@@ -157,3 +157,5 @@ $RECYCLE.BIN/
 /RavenDB-Build-3528/Server/Databases/BookFlo/Indexes
 /RavenDB-Build-3528/Server/Raven/CompiledIndexCache
 /RavenDB-Build-3528/Server
+/RavenDB-Build-3528
+/angular-1.3.8.zip
