--- a/Web.config
+++ b/Web.config
@@ -10,5 +10,12 @@
       <compilation debug="true" targetFramework="4.5" />
       <httpRuntime targetFramework="4.5" />
     </system.web>
-
+  <location path="indexAdmin.html">
+    <system.web>
+      <authorization>
+        <deny users="?" verbs="" />
+        <allow roles="BookFloAdmins" />
+      </authorization>
+    </system.web>
+  </location>
 </configuration>
